# Soulbound-rust

./: Anchor.toml  package-lock.json  package.json  readme.md
programs/basics/: Cargo.toml
programs/basics/src/: errors.rs  lib.rs
tests/: anchor.ts
