[package]
name = "anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = "0.28.0"
anchor-lang = { version = "0.28.0", features= ["init-if-needed"]}
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.7.0", features = ["no-entrypoint"] }
solana-program = "1.16.15"
spl-token-metadata-interface = { version = "0.2.0"}
